<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/tvLUsuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/usuario"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/edtLUsuario"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/tvLUsuario"
        app:layout_constraintStart_toStartOf="@+id/tvLUsuario"
        app:layout_constraintTop_toBottomOf="@+id/tvLUsuario" />

    <TextView
        android:id="@+id/tvLSenha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/senha"
        app:layout_constraintEnd_toEndOf="@+id/edtLUsuario"
        app:layout_constraintStart_toStartOf="@+id/edtLUsuario"
        app:layout_constraintTop_toBottomOf="@+id/edtLUsuario" />

    <EditText
        android:id="@+id/edtLSenha"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/edtLUsuario"
        app:layout_constraintStart_toStartOf="@+id/edtLUsuario"
        app:layout_constraintTop_toBottomOf="@+id/tvLSenha" />

    <Button
        android:id="@+id/btnLEntrar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/entrar"
        app:layout_constraintEnd_toEndOf="@+id/edtLSenha"
        app:layout_constraintStart_toStartOf="@+id/edtLSenha"
        app:layout_constraintTop_toBottomOf="@+id/edtLSenha" />

    <TextView
        android:id="@+id/tvLCadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/novo_usuario"
        app:layout_constraintEnd_toEndOf="@+id/btnLEntrar"
        app:layout_constraintStart_toStartOf="@+id/btnLEntrar"
        app:layout_constraintTop_toBottomOf="@+id/btnLEntrar" />

</androidx.constraintlayout.widget.ConstraintLayout>